# object-model

./: README.md  entry_points.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
object_model/: README.md  __init__.py  _dataclasses.py  _descriptors.py  _json.py  _pydantic.py  _replace.py  _type_checking.py  _type_registry.py  _typing.py  dataclasses.py  descriptors.py  json.py  pydantic.py  replace.py  type_checking.py  typing.py
object_model/db/: __init__.py  context.py  exception.py  persistable.py  postgres.py  rest.py  sql.py  sqlite.py
object_model/db/sql/: postgres.py  sql_context.py  sqlite.py
object_model/server/: rest_server.py
object_model/store/: __init__.py  exception.py  object_record.py  object_result.py  object_store.py  persistable.py  rest.py  sql.py  sql_store.py  store.py  store_types.py  web_client.py  web_server.py
object_model/test/: shared_pydantic_types.py  test_dataclass_serialisation.py  test_id.py  test_json.py  test_json_schema_validation.py  test_persistence.py  test_pydantic_serialisation.py  test_replace.py
