[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onject-model"
description = "Core Object Model"
authors = [
    {name = "Nick Young", email = "nick.young.github@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.11"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python 3",
    "Operating System :: OS Independent"
]

dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[project.entry-points."object-store"]
NamedPersistable = "_pydantic:NamedPersistable"
