[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "object-model"
description = "Core Object Model"
authors = [
    {name = "Nick Young", email = "nick.young.github@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.11"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python 3",
    "Operating System :: OS Independent"
]

version = "1.0.0"
# dynamic = ["dependencies"]

dependencies = [
    "fastapi",
    "frozendict",
    "jsonschema",
    "orjson",
    "pydantic",
    "Requests",
    "setuptools",
    "SQLAlchemy",
    "sqlmodel",
    "uvicorn"
]

[tool.setuptools]
include-package-data = true

#[tool.setuptools.dynamic]
#dependencies = {file = "requirements.txt"}

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[project.entry-points.objectstore]
NamedPersistableModel = "object_model._pydantic:NamedPersistableModel"
NamedPersistable = "object_model._dataclasses:NamedPersistable"
