[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "object-model"
description = "Core Object Model"
authors = [
    {name = "Nick Young", email = "nick.young.github@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.11"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python 3",
    "Operating System :: OS Independent"
]

dynamic = ["entry-points", "version"]

dependencies = [
    "fastapi",
    "frozendict",
    "jsonschema",
    "orjson",
    "psycopg",
    "pydantic",
    "pywin32 ; platform ~=Windows",
    "requests",
    "setuptools",
    "sqlalchemy",
    "sqlalchemy-utc",
    "sqlmodel",
    "uvicorn"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools.dynamic]
entry-points = {file = "entry-points.txt"}
version = {attr = "object_model.__init__.__version__"}
